--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
         <script src="src/entry.js"></script>
     </head>
     <body>
+        <h1 id="main-header">CSCI3300 Group Project</h1>
+        <div id="game-container">
+            <p>This bordered area represents where DOM interaction will occur for the game.</p>
+            <p>The id of said div is: "game-content"</p>
+            <div id="start-button-container">
+                <button type="button" id="start-button">Start Game</button> 
+            </div>
+        </div>
     </body>
 </html>
