Window resize events; move card logic into its own file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta lang="en">
         <title>CSCI3300 Group Project</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <script src="src/entry.js"></script>
+        <script type="module" src="src/entry.js"></script>
     </head>
     <body>
         <h1 id="main-header">CSCI3300 Group Project</h1>
