--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
         <meta charset="utf-8">
         <meta lang="en">
         <title>CSCI3300 Group Project</title>
+        <link rel="icon" type="image/x-icon" href="res/favicon.ico">
         <link rel="stylesheet" href="stylesheet.css">
         <script type="module" src="src/entry.js"></script>
     </head>
     <body>
         <h1 id="main-header">CSCI3300 Group Project</h1>
-        <div id="game-container">
-            <div id="start-button-container">
-                <button type="button" id="start-button">Start Game</button> 
-            </div>
+        <div id="start-button-container">
+            <button type="button" id="start-button">Start Game</button> 
         </div>
     </body>
 </html>
