--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta lang="en">
-        <title>CSCI3300 Group Project</title>
+        <title>Jack of All Trades</title>
         <link rel="icon" type="image/x-icon" href="res/favicon.ico">
         <link rel="stylesheet" href="stylesheet.css">
         <script type="module" src="src/entry.js"></script>
+        
     </head>
     <body>
-        <h1 id="main-header">CSCI3300 Group Project</h1>
+        <h1 id="main-header">Jack of All Trades</h1>
         <div id="start-button-container">
             <button type="button" id="start-button">Start Game</button> 
         </div>
