--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@
         <link rel="icon" type="image/x-icon" href="res/favicon.ico">
         <link rel="stylesheet" href="stylesheet.css">
         <script type="module" src="src/entry.js"></script>
+        <style>
+            body {
+                background-color: #1a0000;
+                margin: 0;
+                padding: 0;
+                font-family: sans-serif;
+                min-height: 100vh;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+            }
+            #main-header {
+                font-family: 'Brush Script MT', cursive, sans-serif;
+                font-size: 3rem;
+                color: #ffffff;
+                margin-top: 2rem;
+                margin-bottom: 2rem;
+                text-align: center;
+            }
+
+            #start-button {
+                background: linear-gradient(135deg, #ff1a1a, #990000);
+                color: white;
+                font-size: 1.5rem;
+                padding: 0.75em 1.5em;
+                border: none;
+                border-radius: 10px;
+                cursor: pointer;
+                box-shadow: 0 0 15px #ff1a1a;
+                animation: pulse 2s infinite;
+                transition: transform 0.3s, bos-shadow 0.3s;
+
+            }
+
+            #start-button:hover {
+                transform: scale(1.1);
+                box-shadow: 0 0 25px #ff3333, 0 0 40px #ff3333;
+            }
+
+            @keyframes pulse {
+                0% {box-shadow: 0 0 10px #ff1a1a; }
+                50% {box-shadow: 0 0 20px #ff4d4d; }
+                100% {box-shadow: 0 0 10px #ff1a1a; }
+            }
+        </style>
         
     </head>
     <body>
