--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
         <div id="start-button-container">
             <button type="button" id="start-button">Start Game</button> 
         </div>
+        <div id="poker-rules">
+            <h2>Poker Rules</h2>
+            <ul>
+                <li> Each Player is dealt a hand of cards</li>
+                <li>Players bet in rounds to win the pot</li>
+                <li>Hands are ranked from high card to royal flush</li>
+                <li>Fold, call, raise, or check during your turn</li>
+                <li>Best hand at the end of the round wins.</li>
+            </ul>
+        </div>
     </body>
 </html>
