--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
                 <li>Best hand at the end of the round wins.</li>
             </ul>
         </div>
+        </div>
     </body>
 </html>
