--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div id="poker-rules">
             <h2>Poker Rules</h2>
             <ul>
-                <li> Each Player is dealt a hand of cards</li>
-                <li>Players bet in rounds to win the pot</li>
-                <li>Hands are ranked from high card to royal flush</li>
-                <li>Fold, call, raise, or check during your turn</li>
-                <li>Best hand at the end of the round wins.</li>
+                <li>Each player is dealt two cards per hand face down</li>
+                <li>Players take turns betting-they can also fold, call, raise, or check</li>
+                <li>Comuunity cards A.K.A the river, is revealed in stages: flop(3 cards),turn(1 card), and the river(1 card)</li>
+                <li> The best five-card hand wins. (view the poker hand table in game to see the rankings from highest-lowest: top to bottom</li>
+                <li>At the end of the round, the betting stops and each player reveals their hand.</li>
             </ul>
         </div>
         </div>
