--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Jack of All Trades</h1>
         <div id="start-button-container">
             <button type="button" id="start-button">Start Game</button> 
+            <button type="button" id="tutorial-button">Tutorial</button>
         </div>
         <div id="poker-rules">
             <h2>Poker Rules</h2>
